--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div>
           <p class="quality-title-sm">Best Quality Mangoes</p>
           <h1>Join The Organic Movement!</h1>
-          <img src="./img/2151542169.jpg" alt="" />
+          <img src="./img/11053243_18965829.jpg" alt="" />
         </div>
         <div>
           <p class="quality-title-lg">Best Quality Mangoes</p>
