fix some issues

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
           ><i class="fa-solid fa-xmark"></i
         ></span>
       </nav>
-
       <div class="header-right">
         <nav class="nav-lg">
           <a href="#intro">About</a>
@@ -53,7 +52,6 @@
         </div>
         <div>
           <p class="quality-title-lg">Best Quality Mangoes</p>
-
           <h1>Join The Organic Movement!</h1>
           <p>
             Indulge in the pure, natural taste of our premium organic mangoes.
@@ -83,7 +81,9 @@
       </section>
       <section id="products" class="products">
         <h2>Trending Products</h2>
-        <div id="products-grid" class="products-grid"></div>
+        <div id="products-grid" class="products-grid">
+          
+        </div>
       </section>
     </main>
     <!-- ---------footer---------- -->
