--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bMango</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
   </head>
   <body>
@@ -79,12 +77,60 @@
           <p>Try It For Free. No Registration Needed.</p>
         </div>
       </section>
+      <!-- products section -->
       <section id="products" class="products">
         <h2>Trending Products</h2>
-        <div id="products-grid" class="products-grid">
-          
-        </div>
+        <div id="products-grid" class="products-grid"></div>
       </section>
+
+      <!--========= modal for buying form=========  -->
+      <!-- The Modal -->
+      <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <span class="close-modal">&times;</span>
+            <h2>Place an order</h2>
+          </div>
+          <div class="modal-body">
+            <form method="post" netlify>
+              <div>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required />
+              </div>
+              <div>
+                <label for="phone">Phone:</label>
+                <input type="tel" id="phone" name="phone" required />
+              </div>
+              <div>
+                <label for="mangoVariety">Variety:</label>
+                <input
+                  list="mangoVarieties"
+                  id="mangoVariety"
+                  name="mangoVariety"
+                  placeholder="Type a mango variety"
+                  required
+                />
+                <datalist id="mangoVarieties">
+                  <!-- Options will be populated dynamically -->
+                </datalist>
+              </div>
+              <div>
+                <label for="amount">Amount:</label>
+                <input
+                  type="number"
+                  id="amount"
+                  name="amount"
+                  placeholder="kg"
+                  required
+                />
+              </div>
+              <div id="priceDisplay"></div>
+              <button type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </main>
     <!-- ---------footer---------- -->
     <footer>
