--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h2>Place an order</h2>
           </div>
           <div class="modal-body">
-            <form method="post" netlify>
+            <form name="order" netlify>
               <div>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required />
