--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
+       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+        #mc_embed_signup{background:#fff; 
+         font:14px Helvetica,Arial,sans-serif; 
+         width: 90%;
+        margin: auto;
+        margin-top: -2rem !important;
+        margin-bottom: 4rem !important;
+        }
+         .mc-field-group{
+          width: 100% !important;
+         }
+         .indicates-required{
+          margin-right: 0px !important;
+         }
+</style>
   </head>
   <body>
     <header>
@@ -39,7 +55,7 @@
           <i class="fa-solid fa-bars"></i>
         </button>
       </div>
-    </header>
+     </header>
     <!-- ---------main---------- -->
     <main>
       <section id="intro" class="intro">
@@ -132,6 +148,33 @@
           </div>
         </div>
       </div>
+      <!--======= subscribe ==============-->
+      <div id="mc_embed_shell">
+ 
+<div id="mc_embed_signup">
+    <form action="https://outlook.us22.list-manage.com/subscribe/post?u=ea8f56ed4b49941765315bb3e&amp;id=7dfa8f72ba&amp;f_id=00c1d3e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+        <div id="mc_embed_signup_scroll"><h2>Subscribe</h2>
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div><div class="mc-field-group"><label for="mce-PHONE">Phone Number </label><input type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+        <div id="mce-responses" class="clear foot">
+            <div class="response" id="mce-error-response" style="display: none;"></div>
+            <div class="response" id="mce-success-response" style="display: none;"></div>
+        </div>
+    <div aria-hidden="true" style="position: absolute; left: -5000px;">
+        /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+        <input type="text" name="b_ea8f56ed4b49941765315bb3e_7dfa8f72ba" tabindex="-1" value="">
+    </div>
+        <div class="optionalParent">
+            <div class="clear foot">
+                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                <p style="margin: 0px auto;"><a href="http://eepurl.com/iS8spU" title="Mailchimp - email marketing made easy and fun"><span style="display: inline-block; background-color: transparent; border-radius: 4px;"><img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a></p>
+            </div>
+        </div>
+    </div>
+</form>
+</div>
+</div>
+
     </main>
     <!-- ---------footer---------- -->
     <footer>
@@ -155,5 +198,6 @@
       <p>&copy; 2024 bMango. All rights reserved.</p>
     </footer>
     <script src="./js/main.js"></script>
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[4]='PHONE';ftypes[4]='phone';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   </body>
 </html>
