mailchimp subscribe form setup and buying form modification

--- a/index.html
+++ b/index.html
@@ -7,25 +7,14 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/modal.css" />
     <link
+      href="//cdn-images.mailchimp.com/embedcode/classic-061523.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-  <style type="text/css">
-        #mc_embed_signup{background:#fff; 
-         font:14px Helvetica,Arial,sans-serif; 
-         width: 90%;
-        margin: auto;
-        margin-top: -2rem !important;
-        margin-bottom: 4rem !important;
-        }
-         .mc-field-group{
-          width: 100% !important;
-         }
-         .indicates-required{
-          margin-right: 0px !important;
-         }
-</style>
   </head>
   <body>
     <header>
@@ -55,8 +44,8 @@
           <i class="fa-solid fa-bars"></i>
         </button>
       </div>
-     </header>
-    <!-- ---------main---------- -->
+    </header>
+    <!-----------main------------>
     <main>
       <section id="intro" class="intro">
         <div>
@@ -93,14 +82,12 @@
           <p>Try It For Free. No Registration Needed.</p>
         </div>
       </section>
-      <!-- products section -->
+      <!----------- products section -------->
       <section id="products" class="products">
         <h2>Trending Products</h2>
         <div id="products-grid" class="products-grid"></div>
       </section>
-
-      <!--========= modal for buying form=========  -->
-      <!-- The Modal -->
+      <!-------------- modal for buying form-------------->
       <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
@@ -121,15 +108,12 @@
               <div>
                 <label for="mangoVariety">Variety:</label>
                 <input
-                  list="mangoVarieties"
+                  type="text"
                   id="mangoVariety"
                   name="mangoVariety"
                   placeholder="Type a mango variety"
                   required
                 />
-                <datalist id="mangoVarieties">
-                  <!-- Options will be populated dynamically -->
-                </datalist>
               </div>
               <div>
                 <label for="amount">Amount:</label>
@@ -141,54 +125,145 @@
                   required
                 />
               </div>
-              <div class="submit-btn-container"><input type="submit"></div>
-              <input hidden  id="total" name="total price"></input>
+              <div
+                style="
+                  flex: 0 0 100%;
+                  margin-top: 0.5rem;
+                  margin-bottom: -0.5rem;
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                "
+              >
+                <div id="price-per-kg"></div>
+                <div id="totalPrice"></div>
+              </div>
+              <div class="submit-btn-container">
+                <input type="submit" />
+              </div>
+              <input hidden id="total" name="total price" />
             </form>
-            <div id="priceDisplay"></div>
           </div>
         </div>
       </div>
-      <!--======= subscribe ==============-->
+      <!------------- subscribe form -------------->
       <div id="mc_embed_shell">
- 
-<div id="mc_embed_signup">
-    <form action="https://outlook.us22.list-manage.com/subscribe/post?u=ea8f56ed4b49941765315bb3e&amp;id=7dfa8f72ba&amp;f_id=00c1d3e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-        <div id="mc_embed_signup_scroll"><h2>Subscribe</h2>
-            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-            <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div><div class="mc-field-group"><label for="mce-PHONE">Phone Number </label><input type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
-        <div id="mce-responses" class="clear foot">
-            <div class="response" id="mce-error-response" style="display: none;"></div>
-            <div class="response" id="mce-success-response" style="display: none;"></div>
-        </div>
-    <div aria-hidden="true" style="position: absolute; left: -5000px;">
-        
-        <input type="text" name="b_ea8f56ed4b49941765315bb3e_7dfa8f72ba" tabindex="-1" value="">
-    </div>
-        <div class="optionalParent">
-            <div class="clear foot">
-                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                <p style="margin: 0px auto;"><a href="http://eepurl.com/iS8spU" title="Mailchimp - email marketing made easy and fun"><span style="display: inline-block; background-color: transparent; border-radius: 4px;"><img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a></p>
+        <div id="mc_embed_signup">
+          <form
+            action="https://outlook.us22.list-manage.com/subscribe/post?u=ea8f56ed4b49941765315bb3e&amp;id=7dfa8f72ba&amp;f_id=00c1d3e1f0"
+            method="post"
+            id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form"
+            class="validate"
+            target="_blank"
+          >
+            <div id="mc_embed_signup_scroll">
+              <h2>Subscribe</h2>
+              <div class="indicates-required">
+                <span class="asterisk">*</span> indicates required
+              </div>
+              <div class="subscribe-grp">
+                <div class="mc-field-group">
+                  <label for="mce-EMAIL"
+                    >Email Address <span class="asterisk">*</span></label
+                  >
+                  <input
+                    type="email"
+                    name="EMAIL"
+                    class="required email"
+                    id="mce-EMAIL"
+                    required=""
+                    value=""
+                  />
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-PHONE"
+                    >Phone Number <span class="asterisk"></span>
+                  </label>
+                  <input
+                    type="text"
+                    name="PHONE"
+                    class="REQ_CSS"
+                    id="mce-PHONE"
+                    value=""
+                  />
+                </div>
+              </div>
+              <div id="mce-responses" class="clear foot">
+                <div
+                  class="response"
+                  id="mce-error-response"
+                  style="display: none"
+                ></div>
+                <div
+                  class="response"
+                  id="mce-success-response"
+                  style="display: none"
+                ></div>
+              </div>
+              <div aria-hidden="true" style="position: absolute; left: -5000px">
+                <input
+                  type="text"
+                  name="b_ea8f56ed4b49941765315bb3e_7dfa8f72ba"
+                  tabindex="-1"
+                  value=""
+                />
+              </div>
+              <div class="optionalParent">
+                <div class="clear foot">
+                  <input
+                    type="submit"
+                    name="subscribe"
+                    id="mc-embedded-subscribe"
+                    class="button"
+                    value="Subscribe"
+                  />
+                  <p style="margin: 0px auto">
+                    <a
+                      href="http://eepurl.com/iS8spU"
+                      title="Mailchimp - email marketing made easy and fun"
+                    >
+                      <span
+                        style="
+                          display: inline-block;
+                          background-color: transparent;
+                          border-radius: 4px;
+                        "
+                      >
+                        <img
+                          class="refferal_badge"
+                          src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                          alt="Intuit Mailchimp"
+                          style="
+                            width: 220px;
+                            height: 40px;
+                            display: flex;
+                            padding: 2px 0px;
+                            justify-content: center;
+                            align-items: center;
+                          "
+                        />
+                      </span>
+                    </a>
+                  </p>
+                </div>
+              </div>
             </div>
+          </form>
         </div>
-    </div>
-</form>
-</div>
-</div>
-
+      </div>
     </main>
-    <!-- ---------footer---------- -->
+    <!-----------footer------------>
     <footer>
       <p>
         <a
           href="https://www.facebook.com/SAKIB797"
           aria-label="facebook profile"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-        .
+          ><i class="fa-brands fa-facebook"></i></a
+        >.
         <a href="https://github.com/SAKIB797" aria-label="github profile"
-          ><i class="fa-brands fa-github"></i
-        ></a>
-        .
+          ><i class="fa-brands fa-github"></i></a
+        >.
         <a
           href="https://www.linkedin.com/in/ihSakib/"
           aria-label="linkedin profile"
@@ -198,6 +273,24 @@
       <p>&copy; 2024 bMango. All rights reserved.</p>
     </footer>
     <script src="./js/main.js"></script>
-    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[4]='PHONE';ftypes[4]='phone';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+    <script
+      type="text/javascript"
+      src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+    ></script>
+    <script type="text/javascript">
+          (function($) {
+            window.fnames = new Array();
+            window.ftypes = new Array();
+            fnames[0] = 'EMAIL'; ftypes[0] = 'email';
+            fnames[4] = '
+
+      PHONE'; ftypes[4] = 'phone';
+            fnames[1] = 'FNAME'; ftypes[1] = 'text';
+            fnames[2] = 'LNAME'; ftypes[2] = 'text';
+            fnames[3] = 'ADDRESS'; ftypes[3] = 'address';
+            fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday';
+          }(jQuery));
+          var $mcj = jQuery.noConflict(true);
+    </script>
   </body>
 </html>
