--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             target="_blank"
           >
             <div id="mc_embed_signup_scroll">
-              <h2>Subscribe</h2>
+              <h2>Subscribe <br> to  our Newsletter</h2>
               <div class="indicates-required">
                 <span class="asterisk">*</span> indicates required
               </div>
