--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@
             target="_blank"
           >
             <div id="mc_embed_signup_scroll">
-              <h2>Subscribe <br> to  our Newsletter</h2>
+              <h2>
+                <span class="first-word"> Subscribe</span> <br />
+                to our Newsletter
+              </h2>
               <div class="indicates-required">
                 <span class="asterisk">*</span> indicates required
               </div>
@@ -176,15 +179,26 @@
                     value=""
                   />
                 </div>
+
                 <div class="mc-field-group">
-                  <label for="mce-PHONE"
-                    >Phone Number <span class="asterisk"></span>
-                  </label>
-                  <input
+                  <label for="mce-FNAME"
+                    >First Name <span class="asterisk"></span></label
+                  ><input
                     type="text"
-                    name="PHONE"
-                    class="REQ_CSS"
-                    id="mce-PHONE"
+                    name="FNAME"
+                    class="text"
+                    id="mce-FNAME"
+                    value=""
+                  />
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-LNAME"
+                    >Last Name <span class="asterisk"></span></label
+                  ><input
+                    type="text"
+                    name="LNAME"
+                    class="text"
+                    id="mce-LNAME"
                     value=""
                   />
                 </div>
