--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <span class="asterisk">*</span> indicates required
               </div>
               <div class="subscribe-grp">
-                <div class="mc-field-group">
+                <div  class="email-grp mc-field-group">
                   <label for="mce-EMAIL"
                     >Email Address <span class="asterisk">*</span></label
                   >
