fix some styles

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
         </div>
       </div>
       <!------------- subscribe form -------------->
-      <div id="mc_embed_shell">
+     <div class="subscribe-wrapper">
+       <div id="mc_embed_shell">
         <div id="mc_embed_signup">
           <form
             action="https://outlook.us22.list-manage.com/subscribe/post?u=ea8f56ed4b49941765315bb3e&amp;id=7dfa8f72ba&amp;f_id=00c1d3e1f0"
@@ -266,6 +267,7 @@
           </form>
         </div>
       </div>
+     </div>
     </main>
     <!-----------footer------------>
     <footer>
