changed menu button icon

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
           class="menu-btn"
           onclick="document.getElementById('nav-sm').style.width='60%'"
         >
-          <i class="fa-solid fa-bars"></i>
+          <img
+            style="display: flex; align-items: center"
+            src="./img/svgexport-9.svg"
+            alt=""
+          />
         </button>
       </div>
     </header>
@@ -147,127 +151,130 @@
         </div>
       </div>
       <!------------- subscribe form -------------->
-     <div class="subscribe-wrapper">
-       <div id="mc_embed_shell">
-        <div id="mc_embed_signup">
-          <form
-            action="https://outlook.us22.list-manage.com/subscribe/post?u=ea8f56ed4b49941765315bb3e&amp;id=7dfa8f72ba&amp;f_id=00c1d3e1f0"
-            method="post"
-            id="mc-embedded-subscribe-form"
-            name="mc-embedded-subscribe-form"
-            class="validate"
-            target="_blank"
-          >
-            <div id="mc_embed_signup_scroll">
-              <h2>
-                <span class="first-word"> Subscribe</span> <br />
-                to our Newsletter
-              </h2>
-              <div class="indicates-required">
-                <span class="asterisk">*</span> indicates required
-              </div>
-              <div class="subscribe-grp">
-                <div  class="email-grp mc-field-group">
-                  <label for="mce-EMAIL"
-                    >Email Address <span class="asterisk">*</span></label
-                  >
-                  <input
-                    type="email"
-                    name="EMAIL"
-                    class="required email"
-                    id="mce-EMAIL"
-                    required=""
-                    value=""
-                  />
+      <div class="subscribe-wrapper">
+        <div id="mc_embed_shell">
+          <div id="mc_embed_signup">
+            <form
+              action="https://outlook.us22.list-manage.com/subscribe/post?u=ea8f56ed4b49941765315bb3e&amp;id=7dfa8f72ba&amp;f_id=00c1d3e1f0"
+              method="post"
+              id="mc-embedded-subscribe-form"
+              name="mc-embedded-subscribe-form"
+              class="validate"
+              target="_blank"
+            >
+              <div id="mc_embed_signup_scroll">
+                <h2>
+                  <span class="first-word"> Subscribe</span> <br />
+                  to our Newsletter
+                </h2>
+                <div class="indicates-required">
+                  <span class="asterisk">*</span> indicates required
                 </div>
-
-                <div class="mc-field-group">
-                  <label for="mce-FNAME"
-                    >First Name <span class="asterisk"></span></label
-                  ><input
-                    type="text"
-                    name="FNAME"
-                    class="text"
-                    id="mce-FNAME"
-                    value=""
-                  />
-                </div>
-                <div class="mc-field-group">
-                  <label for="mce-LNAME"
-                    >Last Name <span class="asterisk"></span></label
-                  ><input
-                    type="text"
-                    name="LNAME"
-                    class="text"
-                    id="mce-LNAME"
-                    value=""
-                  />
-                </div>
-              </div>
-              <div id="mce-responses" class="clear foot">
-                <div
-                  class="response"
-                  id="mce-error-response"
-                  style="display: none"
-                ></div>
-                <div
-                  class="response"
-                  id="mce-success-response"
-                  style="display: none"
-                ></div>
-              </div>
-              <div aria-hidden="true" style="position: absolute; left: -5000px">
-                <input
-                  type="text"
-                  name="b_ea8f56ed4b49941765315bb3e_7dfa8f72ba"
-                  tabindex="-1"
-                  value=""
-                />
-              </div>
-              <div class="optionalParent">
-                <div class="clear foot">
-                  <input
-                    type="submit"
-                    name="subscribe"
-                    id="mc-embedded-subscribe"
-                    class="button"
-                    value="Subscribe"
-                  />
-                  <p style="margin: 0px auto">
-                    <a
-                      href="http://eepurl.com/iS8spU"
-                      title="Mailchimp - email marketing made easy and fun"
+                <div class="subscribe-grp">
+                  <div class="email-grp mc-field-group">
+                    <label for="mce-EMAIL"
+                      >Email Address <span class="asterisk">*</span></label
                     >
-                      <span
-                        style="
-                          display: inline-block;
-                          background-color: transparent;
-                          border-radius: 4px;
-                        "
+                    <input
+                      type="email"
+                      name="EMAIL"
+                      class="required email"
+                      id="mce-EMAIL"
+                      required=""
+                      value=""
+                    />
+                  </div>
+
+                  <div class="mc-field-group">
+                    <label for="mce-FNAME"
+                      >First Name <span class="asterisk"></span></label
+                    ><input
+                      type="text"
+                      name="FNAME"
+                      class="text"
+                      id="mce-FNAME"
+                      value=""
+                    />
+                  </div>
+                  <div class="mc-field-group">
+                    <label for="mce-LNAME"
+                      >Last Name <span class="asterisk"></span></label
+                    ><input
+                      type="text"
+                      name="LNAME"
+                      class="text"
+                      id="mce-LNAME"
+                      value=""
+                    />
+                  </div>
+                </div>
+                <div id="mce-responses" class="clear foot">
+                  <div
+                    class="response"
+                    id="mce-error-response"
+                    style="display: none"
+                  ></div>
+                  <div
+                    class="response"
+                    id="mce-success-response"
+                    style="display: none"
+                  ></div>
+                </div>
+                <div
+                  aria-hidden="true"
+                  style="position: absolute; left: -5000px"
+                >
+                  <input
+                    type="text"
+                    name="b_ea8f56ed4b49941765315bb3e_7dfa8f72ba"
+                    tabindex="-1"
+                    value=""
+                  />
+                </div>
+                <div class="optionalParent">
+                  <div class="clear foot">
+                    <input
+                      type="submit"
+                      name="subscribe"
+                      id="mc-embedded-subscribe"
+                      class="button"
+                      value="Subscribe"
+                    />
+                    <p style="margin: 0px auto">
+                      <a
+                        href="http://eepurl.com/iS8spU"
+                        title="Mailchimp - email marketing made easy and fun"
                       >
-                        <img
-                          class="refferal_badge"
-                          src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                          alt="Intuit Mailchimp"
+                        <span
                           style="
-                            width: 220px;
-                            height: 40px;
-                            display: flex;
-                            padding: 2px 0px;
-                            justify-content: center;
-                            align-items: center;
+                            display: inline-block;
+                            background-color: transparent;
+                            border-radius: 4px;
                           "
-                        />
-                      </span>
-                    </a>
-                  </p>
+                        >
+                          <img
+                            class="refferal_badge"
+                            src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                            alt="Intuit Mailchimp"
+                            style="
+                              width: 220px;
+                              height: 40px;
+                              display: flex;
+                              padding: 2px 0px;
+                              justify-content: center;
+                              align-items: center;
+                            "
+                          />
+                        </span>
+                      </a>
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
-     </div>
     </main>
     <!-----------footer------------>
     <footer>
