fix some error in form

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                   name="mangoVariety"
                   placeholder="Type a mango variety"
                   required
+                  readonly
                 />
               </div>
               <div>
@@ -127,6 +128,8 @@
                   name="amount"
                   placeholder="kg"
                   required
+                  min="1"
+                  max=""
                 />
               </div>
               <div
