--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </div>
               <div>
                 <label for="phone">Phone:</label>
-                <input type="tel" id="phone" name="phone" required />
+                <input type="number" id="phone" name="phone" required />
               </div>
               <div>
                 <label for="mangoVariety">Variety:</label>
