--- a/index.html
+++ b/index.html
@@ -190,13 +190,14 @@
 
                   <div class="mc-field-group">
                     <label for="mce-FNAME"
-                      >First Name <span class="asterisk"></span></label
+                      >First Name <span class="asterisk">*</span></label
                     ><input
                       type="text"
                       name="FNAME"
                       class="text"
                       id="mce-FNAME"
                       value=""
+                      required=""
                     />
                   </div>
                   <div class="mc-field-group">
