--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
           <p style="color: orangered">
             You have to subscribe to our newsletter first!
           </p>
-          <p><a id="goto-subscribe-btn" href="#subscribe">Subscribe Now</a></p>
+          <p>
+            <a id="goto-subscribe-btn" href="#subscribe">Subscribe Now</a>
+          </p>
         </div>
         <!-- buying content -->
         <div class="modal-content">
